--- a/PreAcademicInfoFront/webapp/src/app/signin/login/login.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/signin/login/login.component.html
@@ -1,5 +1,30 @@
 <div class="background_class">
-  <div class="logo">
+  <!-- <div class="logo">
       <img src="https://academicinfo.ubbcluj.ro/Info/Images/ubb.png" />
-  </div>
+  </div> -->
+  <form (ngSubmit)="submitForm()" class="form_style" >
+      <h2>AcademicInfo - UBB</h2>
+      <div class="display">
+          <input class="input_style" 
+                 type="text"
+                 placeholder="Enter Username" 
+                 name="email"
+                 [(ngModel)] = "userLoginData.username" 
+                 required />
+
+          <input class="input_password_style"
+                 type="password"
+                 placeholder="Enter Password" 
+                 name="pass" 
+                 [(ngModel)] = "userLoginData.password" 
+                 required />
+
+          <button class="button_style"> LOGIN </button>
+
+          <div class="error_message" *ngIf="displayError()" >
+            {{getMessage()}}
+          </div>
+
+      </div> 
+  </form>
 </div>
