--- a/PreAcademicInfoFront/webapp/src/app/signin/login/login.component.scss
+++ b/PreAcademicInfoFront/webapp/src/app/signin/login/login.component.scss
@@ -16,12 +16,12 @@
 }
 
 .form_style{
-    margin: 0 auto;
-  width: 70%;
-  min-width: 200px;
-  max-width: 700px;
+
+  margin-left: 25%;
+  margin-right:25%;
+  width: 50%;
   text-align: center;
-  border: 3px solid black;
+  border: 2px solid #0000be;
   padding-top: 10px;
   padding-bottom: 60px;
   color: black;
@@ -29,7 +29,7 @@
 }
 
 .title_style{
-    margin-top: 40px;
+  margin-top: 40px;
   margin-bottom: 70px;
   font-size: 3em;
   color: black;
@@ -48,7 +48,7 @@
 
 .input_style{
   font-size: 1.45em;
-  border: 1px solid #ddd;    
+  border: 1px solid #ddd;
 }
 
 .input_password_style{
@@ -56,15 +56,14 @@
     border: 1px solid #ddd;
 }
 
-.button_style{
-  font-size: 2em;
-  background-color: black;
-  color: white;
-}
 
 .error_message{
     background: #6cb4b8;
     padding: 10px 10px;
     border-radius: 10px;
     margin: 10px 0;
+}
+
+.example-full-width {
+  width: 100%;
 }
