--- a/PreAcademicInfoFront/webapp/src/app/disciplines/disciplines.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/disciplines/disciplines.component.html
@@ -1,4 +1,51 @@
 <app-navigation></app-navigation>
-<p>
-  disciplines works!
-</p>
+<div class="afis">
+
+
+      <table mat-table [dataSource]="dataSource1" class="mat-elevation-z8">
+
+        <!--- Note that these columns can be defined in any order.
+              The actual rendered columns are set as a property on the row definition" -->
+
+        <ng-container matColumnDef="Check">
+          <th mat-header-cell *matHeaderCellDef> Check </th>
+          <td mat-cell *matCellDef="let element">
+          <mat-checkbox [disabled]="isDisabled(element.obligatoriu)"
+          [checked]="isDisabled(element.obligatoriu)"></mat-checkbox>
+          </td>
+        </ng-container>
+        <!-- Position Column -->
+        <ng-container matColumnDef="An">
+          <th mat-header-cell *matHeaderCellDef> An </th>
+          <td mat-cell *matCellDef="let element"> {{element.An}} </td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="semestru">
+          <th mat-header-cell *matHeaderCellDef> Semestru </th>
+          <td mat-cell *matCellDef="let element"> {{element.semestru}} </td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="nume">
+          <th mat-header-cell *matHeaderCellDef> Nume </th>
+          <td mat-cell *matCellDef="let element"> {{element.nume}} </td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="nrCredite">
+          <th mat-header-cell *matHeaderCellDef> nr Credite </th>
+          <td mat-cell *matCellDef="let element"> {{element.nrCredite}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="locuri">
+          <th mat-header-cell *matHeaderCellDef> Locuri disponibile/Locuri ocupate </th>
+          <td mat-cell *matCellDef="let element"> {{element.locuriDisponibile}}/{{element.locuriOcupate}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="columnsToDisplay1"></tr>
+        <tr mat-row *matRowDef="let row; columns: columnsToDisplay1;"></tr>
+      </table>
+
+
+</div>
