--- a/PreAcademicInfoFront/webapp/src/app/disciplines/disciplines.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/disciplines/disciplines.component.html
@@ -1,7 +1,22 @@
 <app-navigation></app-navigation>
 <div class="afis">
 
-
+  <div class="selectors">
+  <mat-form-field>
+    <mat-select placeholder="An">
+      <mat-option *ngFor="let food of ani" [value]="food.value">
+        {{food.viewValue}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+  <mat-form-field>
+    <mat-select placeholder="Semestru">
+      <mat-option *ngFor="let food of semestre" [value]="food.value">
+        {{food.viewValue}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+  </div>
       <table mat-table [dataSource]="dataSource1" class="mat-elevation-z8">
 
         <!--- Note that these columns can be defined in any order.
