sumbit button added

--- a/PreAcademicInfoFront/webapp/src/app/disciplines/disciplines.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/disciplines/disciplines.component.html
@@ -47,5 +47,6 @@
         <tr mat-row *matRowDef="let row; columns: columnsToDisplay1;"></tr>
       </table>
 
+  <button mat-raised-button (onClick)="submitContract()"  color="primary" >Trimite contract</button>
 
 </div>
