--- a/PreAcademicInfoFront/webapp/src/app/admin/crudstudent/crudstudent.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/admin/crudstudent/crudstudent.component.html
@@ -1,4 +1,5 @@
 <app-navigation-admin></app-navigation-admin>
+<div class="big">
 <div class="example-container">
     <form (ngSubmit)="submitForm()" class="ex-container">
       <br><br>
@@ -68,3 +69,4 @@
   <button  mat-raised-button style="float: right;" color="primary">Submit</button>
     </form>
    </div>
+</div>
