--- a/PreAcademicInfoFront/webapp/src/app/admin/crudstudent/crudstudent.component.scss
+++ b/PreAcademicInfoFront/webapp/src/app/admin/crudstudent/crudstudent.component.scss
@@ -1,13 +1,21 @@
+.big{
+  width:98.9%;
+  height: 100%;
+  position: absolute;
+  background: #6cb4b8;
+}
 .example-container {
     margin-left: 10%;
     margin-right: 10%;
+    background: white;
+
   }
 .ex-container {
     display: flex;
     flex-direction: column;
     padding-top:20px;
   }
-  
+
   .column {
     margin-top: 1px;
     float: left;
@@ -21,4 +29,3 @@
     clear: both;
 }
 
-  
