--- a/PreAcademicInfoFront/webapp/src/app/teacher/note/note.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/teacher/note/note.component.html
@@ -3,28 +3,58 @@
 
   <div class="selectors">
     <mat-form-field class="select" *ngIf="isMoreThanOneMaterii()">
-      <mat-select class = "white" placeholder="Materie">
-        <mat-option *ngFor="let food of materii" [value]="food.value">
-          {{food.viewValue}}
+      <mat-select class = "white" placeholder="Materie" [(ngModel)]="selectedMaterie" name="materie">
+        <mat-option *ngFor="let materie of materii" [value]="materie.viewValue">
+          {{materie.viewValue}}
         </mat-option>
       </mat-select>
     </mat-form-field>
+    <!-- <p> Selected materie: {{selectedMaterie}} </p> -->
    &nbsp;&nbsp;&nbsp;&nbsp;
   <mat-form-field class="select" *ngIf="isMoreThanOneGrupe()">
-    <mat-select class = "white" placeholder="Grupa">
-      <mat-option *ngFor="let food of grupe" [value]="food.value">
-        {{food.viewValue}}
+    <mat-select class = "white" placeholder="Grupa" [(ngModel)]="selectedGrupa" name="grupa">
+      <mat-option *ngFor="let grupa of grupe" [value]="grupa.viewValue">
+        {{grupa.viewValue}}
       </mat-option>
     </mat-select>
   </mat-form-field>
+  <!-- <p> Selected grupa: {{selectedGrupa}} </p> -->
     &nbsp;&nbsp;&nbsp;&nbsp;
-  <!-- <mat-form-field class="select">
-    <mat-select class = "white" placeholder="Semestru">
-      <mat-option *ngFor="let food of semestre" [value]="food.value">
-        {{food.viewValue}}
-      </mat-option>
-    </mat-select>
-  </mat-form-field> -->
+  <mat-form-field color="primay">
+      <mat-label>Choose a date</mat-label>
+      <input matInput [matDatepicker]="myDatepicker" placeholder="Choose a date">
+      <mat-datepicker-toggle matSuffix [for]="myDatepicker"></mat-datepicker-toggle>
+      <mat-datepicker #myDatepicker color="primay"></mat-datepicker>
+  </mat-form-field>
+  <!-- <p>Is valid moment object: {{isValidMoment}}</p> -->
   </div>
 
+  <br>
+
+  <div class="radio_buttons" *ngIf="showRadioButtons()">
+    <label>Tip nota: </label>
+    <mat-radio-group   [(ngModel)]="choosedOption">
+      <mat-radio-button *ngFor="let a of optiuniNote" [value]="a"
+                  (change)="radioChange($event)">
+          {{a}} &nbsp; &nbsp;
+      </mat-radio-button>
+    </mat-radio-group>
+    <!-- <p>Your option is: {{choosedOption}}</p> -->
+  </div>
+  
+  <div *ngIf="isExamenFinal">
+    Here will be displayed the layout for Final Exam
+  </div>
+
+  <div *ngIf="isLaborator">
+    Here will be displayed the layout for Laborator
+  </div>
+
+  <div *ngIf="isSeminar">
+    Here will be displayed the layout for Seminar
+  </div>
+
+  <div *ngIf="isBonus">
+    Here will be displayed the layout for Bonus
+  </div>
 </div>
