--- a/PreAcademicInfoFront/webapp/src/app/student/home/home.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/student/home/home.component.html
@@ -2,13 +2,28 @@
 <div >
   <mat-divider></mat-divider>
 </div>
+<div>
+  <mat-form-field>
+    <mat-select [(value)]="selectedAn">
+      <mat-option *ngFor="let  of " [value]="animal">
+        {{animal.name}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-select [(value)]="selectedSemestru">
+
+    </mat-select>
+  </mat-form-field>
+</div>
 <div class="afis">
   <table mat-table
-         matSort (matSortChange)="sortData($event)"
+         matSort (matSortChange)="sortList($event)"
          [dataSource]="dataSource" multiTemplateDataRows
          class="mat-elevation-z8">
     <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
-      <th mat-header-cell *matHeaderCellDef> {{column}} </th>
+      <th mat-sort-header="{{column}}" *matHeaderCellDef> {{column}} </th>
       <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
     </ng-container>
 
