--- a/PreAcademicInfoFront/webapp/src/app/signin/login/login.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/signin/login/login.component.html
@@ -18,6 +18,10 @@
             {{getMessage()}}
           </div>
 
+        <div class="spinner" *ngIf="clickedButton()">
+          <mat-spinner></mat-spinner>
+        </div>
+
       </div>
   </form>
 </div>
