--- a/PreAcademicInfoFront/webapp/src/app/signin/login/login.component.scss
+++ b/PreAcademicInfoFront/webapp/src/app/signin/login/login.component.scss
@@ -64,6 +64,13 @@
     margin: 10px 0;
 }
 
+.spinner{
+  padding: 10px 10px;
+  border-radius: 10px;
+  margin: 10px 0;
+}
+
+
 .example-full-width {
   width: 100%;
 }
