--- a/PreAcademicInfoFront/webapp/src/app/student/home/home.component.scss
+++ b/PreAcademicInfoFront/webapp/src/app/student/home/home.component.scss
@@ -11,9 +11,18 @@ table {
   height: 100%;
   position: absolute;
 }
-
+.selectors {
+  display: table;
+  margin: 0 auto;
+}
 tr.example-detail-row {
   height: 0;
+}
+.white{
+  background: white;
+}
+.select{
+  margin-right: 10px;
 }
 
 tr.example-element-row:not(.example-expanded-row):hover {
