added admin list and delete Students + Teachers

--- a/PreAcademicInfoFront/webapp/src/app/admin/nav-admin/nav-admin.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/admin/nav-admin/nav-admin.component.html
@@ -6,7 +6,8 @@
   
     <button mat-button >Cataloage</button>
     <button mat-button routerLink="../contracte">Contracte studii</button>
-    <button mat-button >Profesori</button>
+    <button mat-button routerLink="../teachers">Profesori</button>
+    <button mat-button routerLink="../students">Studenti</button>
     <button mat-button >Cereri</button>
     <button mat-button >Taxe</button>
   
