--- a/PreAcademicInfoFront/webapp/src/app/admin/news/news.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/admin/news/news.component.html
@@ -1,8 +1,8 @@
 <app-navigation-admin></app-navigation-admin>
-
+<br>
 <div class="selectors">
   <mat-form-field class="select">
-    <mat-select class = "white"  placeholder="Departament">
+    <mat-select class = "white" (selectionChange)="onChange($event)" placeholder="Departament">
       <mat-option *ngFor="let d of departamente" [value]="d.value">
         {{d.viewValue}}
       </mat-option>
@@ -11,14 +11,14 @@
   &nbsp;&nbsp;&nbsp;&nbsp;
   <mat-form-field class="select">
     <mat-select class = "white" placeholder="Specializare">
-      <mat-option *ngFor="let s of specializari" [value]="s.value">
+      <mat-option *ngFor="let s of specializari" [value]="s.value" >
         {{s.viewValue}}
       </mat-option>
     </mat-select>
   </mat-form-field>
  &nbsp;&nbsp;&nbsp;&nbsp;
 <mat-form-field class="select">
-  <mat-select class = "white" placeholder="An">
+  <mat-select class = "white" (selectionChange)="onAnChange($event)"  placeholder="An">
     <mat-option *ngFor="let a of ani" [value]="a.value">
       {{a.viewValue}}
     </mat-option>
@@ -26,7 +26,7 @@
 </mat-form-field>
 &nbsp;&nbsp;&nbsp;&nbsp;
 <mat-form-field class="select">
-  <mat-select class = "white" (selectionChange)="onChange($event)" placeholder="Grupa">
+  <mat-select class = "white" (selectionChange)="onGrupaChange($event)" placeholder="Grupa">
     <mat-option *ngFor="let g of grupe" [value]="g.value">
       {{g.viewValue}}
     </mat-option>
@@ -35,10 +35,17 @@
 
 
   <div *ngIf="selected">
-      <label>Titlu</label>
-      <input matInput placeholder="Titlu" name="title" [(ngModel)]="mail.titlu"  required>
-      <label>Mesaj</label>
-      <input matInput placeholder="Mesaj" name="mesaj" [(ngModel)]="mail.mesaj"  required>
+      <form (ngSubmit)="submitForm()" class="ex-container">
+        <mat-form-field class="example-full-width">
+        <input matInput placeholder="Titlu" name="title" [(ngModel)]="mail.titlu" required>
+        </mat-form-field>
+        <br>        
+        <mat-form-field class="example-full-width">
+        <textarea class="big-box" matInput placeholder="Mesaj" name="mesaj" [(ngModel)]="mail.mesaj"></textarea>
+        </mat-form-field>
 
+        <button  mat-raised-button (onClick)="sendMail()" style="float: right;" color="primary">Submit</button>
+      </form>
   </div>
+  
 </div>
