--- a/PreAcademicInfoFront/webapp/src/app/admin/news/news.component.scss
+++ b/PreAcademicInfoFront/webapp/src/app/admin/news/news.component.scss
@@ -2,3 +2,10 @@
     display: table;
     margin: 0 auto;
   }
+  .example-full-width{
+    margin-left: 5px;
+    width: 100%;
+  }
+  .big-box{
+    min-height: 150px;
+  }
