guide added,grades connected-not working properly

--- a/PreAcademicInfoFront/webapp/src/app/student/navigation/navigation.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/student/navigation/navigation.component.html
@@ -18,6 +18,7 @@
       <button mat-menu-item>Vizualizare cereri trimise</button>
     </mat-menu>
   <button mat-button >Taxe</button>
+  <button mat-button routerLink="../guide">Guide</button>
 
 
     <span class="fill-space"></span>
