--- a/PreAcademicInfoFront/webapp/src/app/student/home/home.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/student/home/home.component.html
@@ -36,7 +36,7 @@
         <div class="example-element-detail"
              [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
           <div class="example-element-description">
-            {{"Descriere: "+ element.descriere+"   Data Promovarii:"+ element.dataPromovarii+"    Cod Materie: "+element.codMaterie}}
+            {{"Data Promovarii:"+ element.dataPromovarii+"    Cod Materie: "+element.codMaterie}}
             <span class="example-element-description-attribution">
             </span>
           </div>
