--- a/PreAcademicInfoFront/webapp/src/app/student/guide/guide.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/student/guide/guide.component.html
@@ -1,28 +1,24 @@
 <app-navigation></app-navigation>
 
-<div class="blog-card spring-fever">
-  <div class="title-content">
-    <h3>CLUJ NAPOCA</h3>
-    <hr />
-    <div class="intro">Descopera Clujul, orasul tuturor posibilitatilor!</div>
-  </div><!-- /.title-content -->
-  <div class="card-info">
-    Acest site te poate ajuta in orientarea ta in oras. Nu ezita sa explorezi!
-  </div><!-- /.card-info -->
-  <div class="utility-info">
-    <ul class="utility-list">
-      <li class="date">03.12.2015</li>
-    </ul>
-  </div><!-- /.utility-info -->
-  <!-- overlays -->
-  <div class="gradient-overlay"></div>
-  <div class="color-overlay"></div>
-</div><!-- /.blog-card -->
-
-
 <mat-grid-list cols="2" rowHeight="2:1">
-  <mat-grid-tile>1</mat-grid-tile>
-  <mat-grid-tile>2</mat-grid-tile>
-  <mat-grid-tile>3</mat-grid-tile>
-  <mat-grid-tile>4</mat-grid-tile>
+  <mat-grid-tile class="cluj fade">
+    <div id="title">
+      Cluj-Napoca
+    </div>
+  </mat-grid-tile>
+  <mat-grid-tile class="ubb fade">
+    <div id="title">
+      Universitatea Babes Bolyai 
+    </div>
+  </mat-grid-tile>
+  <mat-grid-tile class="ghid fade">
+      <div id="title">
+        Universitatea Babes Bolyai 
+      </div>
+    </mat-grid-tile>
+    <mat-grid-tile class="ubb fade">
+        <div id="title">
+          Universitatea Babes Bolyai 
+        </div>
+      </mat-grid-tile>
 </mat-grid-list>
