payment with stripe

--- a/PreAcademicInfoFront/webapp/src/app/student/navigation/navigation.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/student/navigation/navigation.component.html
@@ -18,7 +18,7 @@
       <button mat-menu-item >Trimite Cerere</button>
       <button mat-menu-item>Vizualizare cereri trimise</button>
     </mat-menu>
-  <button mat-button >Taxe</button>
+  <button mat-button routerLink="../taxe">Taxe</button>
   <button mat-button routerLink="../guide">Guide</button>
 
 
