--- a/PreAcademicInfoFront/webapp/src/app/student/payments/payments.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/student/payments/payments.component.html
@@ -1,3 +1,5 @@
-<p>
-  payments works!
-</p>
+<app-navigation></app-navigation>
+
+<h1>Taxa scolara</h1>
+
+<button  mat-raised-button color="primary" (click)="openCheckout()" >Spre plata online</button>
