--- a/PreAcademicInfoFront/webapp/src/app/student/payments/payments.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/student/payments/payments.component.html
@@ -1,5 +1,6 @@
 <app-navigation></app-navigation>
 
 <h1>Taxa scolara</h1>
+<mat-slide-toggle [(ngModel)] = "myModel">plata in transe</mat-slide-toggle><br>
 
 <button  mat-raised-button color="primary" (click)="openCheckout()" >Spre plata online</button>
