--- a/PreAcademicInfoFront/webapp/src/app/student/guide/guide.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/student/guide/guide.component.html
@@ -1,24 +1,32 @@
 <app-navigation></app-navigation>
 
 <mat-grid-list cols="2" rowHeight="2:1">
-  <mat-grid-tile class="cluj fade">
-    <div id="title">
-      Cluj-Napoca
-    </div>
-  </mat-grid-tile>
+  <a href="https://cluj.com/">
+    <mat-grid-tile class="cluj fade">
+      <div id="title">
+        Cluj-Napoca
+      </div>
+    </mat-grid-tile>
+  </a>
+  <a href="https://www.ubbcluj.ro/">
   <mat-grid-tile class="ubb fade">
     <div id="title">
       Universitatea Babes Bolyai 
     </div>
   </mat-grid-tile>
+</a>
+<a href="https://cluj.com/articole/ghidul-studentului-ubb-cluj-locuri-camin-campus/">
   <mat-grid-tile class="ghid fade">
       <div id="title">
-        Universitatea Babes Bolyai 
+        Ghidul studentului  
       </div>
     </mat-grid-tile>
+  </a>
+  <a href="https://news.ubbcluj.ro/">
     <mat-grid-tile class="ubb fade">
         <div id="title">
-          Universitatea Babes Bolyai 
+          News 
         </div>
       </mat-grid-tile>
+    </a>
 </mat-grid-list>
