--- a/PreAcademicInfoFront/webapp/src/app/teacher/note-finale-date-picker/note-finale-date-picker.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/teacher/note-finale-date-picker/note-finale-date-picker.component.html
@@ -24,7 +24,7 @@
       <th mat-header-cell *matHeaderCellDef> Nota </th>
       <td mat-cell *matCellDef="let element">
               <mat-form-field>
-                  <input matInput placeholder="Give a grade" #input (focusout)="saveGrade($event)">
+                  <input matInput placeholder="Give a grade" #input (focusout)="saveGrade($event,element)">
               </mat-form-field>
                {{element.nota}} </td>
     </ng-container>
