--- a/PreAcademicInfoFront/webapp/src/app/teacher/note-finale/note-finale.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/teacher/note-finale/note-finale.component.html
@@ -15,10 +15,10 @@
   <ng-container matColumnDef="nota">
     <th mat-header-cell *matHeaderCellDef> Nota </th>
     <td mat-cell *matCellDef="let element">
-            <mat-form-field >
-                <input matInput placeholder="Give a grade" #input (focusout)="saveGrade($event)">
+            <mat-form-field>
+                <input matInput placeholder="Give a grade" #input (focusout)="saveGrade($event,element)">
             </mat-form-field>
-             {{element.nota}} </td>
+             {{element.grades[0]["id"]}} </td>
   </ng-container>
 
 
@@ -26,7 +26,7 @@
       <th mat-header-cell *matHeaderCellDef> Data </th>
       <td mat-cell *matCellDef="let element">
           <mat-form-field>
-              <input matInput [matDatepicker]="picker" placeholder="Alege o data" (focusout)="saveDate($event)">
+              <input matInput [matDatepicker]="picker" placeholder="Alege o data" (focusout)="saveDate($event,element)">
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
               <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
