--- a/PreAcademicInfoFront/webapp/src/app/teacher/note-finale/note-finale.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/teacher/note-finale/note-finale.component.html
@@ -16,9 +16,9 @@
     <th mat-header-cell *matHeaderCellDef> Nota </th>
     <td mat-cell *matCellDef="let element">
             <mat-form-field>
-                <input matInput placeholder="Give a grade" #input (focusout)="saveGrade($event,element)">
+                <input matInput placeholder="{{element.grades[0]['value']}}" #input (focusout)="saveGrade($event,element)">
             </mat-form-field>
-             {{element.grades[0]["id"]}} </td>
+            </td>
   </ng-container>
 
 
