--- a/PreAcademicInfoFront/webapp/src/app/teacher/note/note.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/teacher/note/note.component.html
@@ -2,16 +2,16 @@
 <div class="show">
 
   <div class="selectors">
-    <mat-form-field class="select" *ngIf="isMoreThanOneMaterii()">
-      <mat-select class = "white" placeholder="Materie" [(ngModel)]="selectedMaterie" name="materie">
-        <mat-option *ngFor="let materie of materii" [value]="materie.viewValue">
+    <mat-form-field class="select" *ngIf="isMoreThanOneMaterii()" >
+      <mat-select class = "white" placeholder="Materie" [(ngModel)]="selectedMaterie" (ngModelChange)="getGrupe()" name="materie">
+        <mat-option *ngFor="let materie of materii" [value]="materie.viewValue" >
           {{materie.viewValue}}
         </mat-option>
       </mat-select>
     </mat-form-field>
     <!-- <p> Selected materie: {{selectedMaterie}} </p> -->
    &nbsp;&nbsp;&nbsp;&nbsp;
-  <mat-form-field class="select" *ngIf="isMoreThanOneGrupe()">
+  <mat-form-field class="select" *ngIf="selectedMaterie">
     <mat-select class = "white" placeholder="Grupa" [(ngModel)]="selectedGrupa" name="grupa">
       <mat-option *ngFor="let grupa of grupe" [value]="grupa.viewValue">
         {{grupa.viewValue}}
