--- a/PreAcademicInfoFront/webapp/src/app/student/note-lab/note-lab.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/student/note-lab/note-lab.component.html
@@ -1,3 +1,78 @@
-<p>
-  note-lab works!
-</p>
+<app-navigation></app-navigation>
+<div>
+
+    <div class="selectors">
+      <mat-form-field class="select">
+        <mat-select class = "white" (selectionChange)="onChangeMaterie($event)"  placeholder="An" >
+          <mat-option   *ngFor="let materie  of materii"  [value]="materie.value" >
+            {{materie.viewValue}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+      &nbsp;&nbsp;
+
+      <mat-grid-list  *ngIf="this.seven"  cols="1" rowHeight="1:1">
+        <mat-grid-tile>
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+        <ng-container matColumnDef="position">
+          <th mat-header-cell *matHeaderCellDef> No. </th>
+          <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+        </mat-grid-tile>
+      </mat-grid-list>
+
+  <mat-grid-list  *ngIf="!this.seven"  cols="2" rowHeight="2:1">
+    <mat-grid-tile>
+
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+        <ng-container matColumnDef="position">
+          <th mat-header-cell *matHeaderCellDef> No. </th>
+          <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </mat-grid-tile>
+
+    <mat-grid-tile>
+
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+        <ng-container matColumnDef="position">
+          <th mat-header-cell *matHeaderCellDef> No. </th>
+          <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </mat-grid-tile>
+  </mat-grid-list>
+
+</div>
