--- a/PreAcademicInfoFront/webapp/src/app/student/note-lab/note-lab.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/student/note-lab/note-lab.component.html
@@ -14,17 +14,17 @@
 
       <mat-grid-list  *ngIf="this.seven"  cols="1" rowHeight="1:1">
         <mat-grid-tile>
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <table mat-table [dataSource]="this.grades" class="mat-elevation-z8">
 
-        <ng-container matColumnDef="position">
-          <th mat-header-cell *matHeaderCellDef> No. </th>
-          <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+        <ng-container matColumnDef="value">
+          <th mat-header-cell *matHeaderCellDef> Nota </th>
+          <td mat-cell *matCellDef="let element"> {{element.value}} </td>
         </ng-container>
 
         <!-- Name Column -->
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Name </th>
-          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <ng-container matColumnDef="data">
+          <th mat-header-cell *matHeaderCellDef> Data notei </th>
+          <td mat-cell *matCellDef="let element"> {{element.data}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -36,17 +36,17 @@
   <mat-grid-list  *ngIf="!this.seven"  cols="2" rowHeight="2:1">
     <mat-grid-tile>
 
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <table mat-table [dataSource]="this.grades" class="mat-elevation-z8">
 
-        <ng-container matColumnDef="position">
-          <th mat-header-cell *matHeaderCellDef> No. </th>
-          <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+        <ng-container matColumnDef="value">
+          <th mat-header-cell *matHeaderCellDef> Nota </th>
+          <td mat-cell *matCellDef="let element"> {{element.value}} </td>
         </ng-container>
 
         <!-- Name Column -->
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Name </th>
-          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <ng-container matColumnDef="data">
+          <th mat-header-cell *matHeaderCellDef> Data notei </th>
+          <td mat-cell *matCellDef="let element"> {{element.data}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -56,22 +56,25 @@
 
     <mat-grid-tile>
 
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <mat-grid-tile>
 
-        <ng-container matColumnDef="position">
-          <th mat-header-cell *matHeaderCellDef> No. </th>
-          <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-        </ng-container>
+        <table mat-table [dataSource]="this.grades" class="mat-elevation-z8">
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Name </th>
-          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-        </ng-container>
+          <ng-container matColumnDef="value">
+            <th mat-header-cell *matHeaderCellDef> Nota </th>
+            <td mat-cell *matCellDef="let element"> {{element.value}} </td>
+          </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
+          <!-- Name Column -->
+          <ng-container matColumnDef="data">
+            <th mat-header-cell *matHeaderCellDef> Data notei </th>
+            <td mat-cell *matCellDef="let element"> {{element.data}} </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+      </mat-grid-tile>
     </mat-grid-tile>
   </mat-grid-list>
 
