--- a/PreAcademicInfoFront/webapp/src/app/signin/login/login.component.scss
+++ b/PreAcademicInfoFront/webapp/src/app/signin/login/login.component.scss
@@ -1,4 +1,11 @@
 
+
+.ubb{
+  margin-left: 40%;
+  margin-top:2%;
+  box-shadow: 10px 10px 5px gray;
+}
+
 .background_class{
     margin:0;
     position: absolute;
@@ -16,16 +23,19 @@
 }
 
 .form_style{
-
+  margin-top:2%;
+  box-sizing: border-box;
   margin-left: 25%;
   margin-right:25%;
   width: 50%;
   text-align: center;
-  border: 2px solid #0000be;
+  //border: 2px solid #0000be;
   padding-top: 10px;
   padding-bottom: 60px;
   color: black;
   background: white;
+  border-radius: 10px;
+  box-shadow: 10px 10px 5px gray;
 }
 
 .title_style{
