--- a/PreAcademicInfoFront/webapp/src/app/student/note-lab/note-lab.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/student/note-lab/note-lab.component.html
@@ -12,15 +12,13 @@
     </div>
       &nbsp;&nbsp;
 
-      
-      <table mat-table [dataSource]="notele" class="mat-elevation-z8">
+  <table *ngIf="seven==1" mat-table [dataSource]="notele" class="mat-elevation-z8">
 
         <ng-container matColumnDef="value">
           <th mat-header-cell *matHeaderCellDef> Nota </th>
           <td mat-cell *matCellDef="let element"> {{element.value}} </td>
         </ng-container>
 
-        <!-- Name Column -->
         <ng-container matColumnDef="data">
           <th mat-header-cell *matHeaderCellDef> Data notei </th>
           <td mat-cell *matCellDef="let element"> {{element.data}} </td>
@@ -28,51 +26,6 @@
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-
-  <mat-grid-list  *ngIf="seven==2"  cols="2" rowHeight="2:1">
-    <mat-grid-tile>
-
-      <table mat-table [dataSource]="notele" class="mat-elevation-z8">
-
-        <ng-container matColumnDef="value">
-          <th mat-header-cell *matHeaderCellDef> Nota </th>
-          <td mat-cell *matCellDef="let element"> {{element.value}} </td>
-        </ng-container>
-
-        <!-- Name Column -->
-        <ng-container matColumnDef="data">
-          <th mat-header-cell *matHeaderCellDef> Data notei </th>
-          <td mat-cell *matCellDef="let element"> {{element.data}} </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-    </mat-grid-tile>
-
-    <mat-grid-tile>
-
-      <mat-grid-tile>
-
-        <table mat-table [dataSource]="this.grades" class="mat-elevation-z8">
-
-          <ng-container matColumnDef="value">
-            <th mat-header-cell *matHeaderCellDef> Nota </th>
-            <td mat-cell *matCellDef="let element"> {{element.value}} </td>
-          </ng-container>
-
-          <!-- Name Column -->
-          <ng-container matColumnDef="data">
-            <th mat-header-cell *matHeaderCellDef> Data notei </th>
-            <td mat-cell *matCellDef="let element"> {{element.data}} </td>
-          </ng-container>
-
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-      </mat-grid-tile>
-    </mat-grid-tile>
-  </mat-grid-list>
+  </table>
 
 </div>
