google map added in guide

--- a/PreAcademicInfoFront/webapp/src/app/student/guide/guide.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/student/guide/guide.component.html
@@ -30,3 +30,9 @@
       </mat-grid-tile>
     </a>
 </mat-grid-list>
+
+<br>
+<br>
+<div style="width: 100%; display: flex; justify-content: center;">
+  <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1TwNVvVGQNgkBvjUyFRCSrytmCbXZ7TM_" width="640" height="480"></iframe>
+</div>
