--- a/PreAcademicInfoFront/webapp/src/app/student/navigation/navigation.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/student/navigation/navigation.component.html
@@ -24,11 +24,36 @@
 
     <span class="fill-space"></span>
     <div>
-  <button class="profile">
+  <button  mat-button [matMenuTriggerFor]="profile"  class="profile">
     <i class="material-icons">
       account_circle
     </i>
   </button>
+  <mat-menu #profile="matMenu" class="menu-form-wrapper" [hasBackdrop]="false">
+
+      <div (click)="$event.stopPropagation()" (keydown)="$event.stopPropagation()">
+    
+          <form (ngSubmit)="changePassword()" class="menu-form" >
+            <mat-form-field class="example-full-width">
+              <input type="password" matInput placeholder="Old Password" name="old-password" [(ngModel)]="newPassData.old_password" required>
+            </mat-form-field>
+            <mat-divider [vertical]="true"></mat-divider>
+            <mat-form-field class="example-full-width">
+              <input type="password" matInput placeholder="New Password" name="new_password" [(ngModel)]="newPassData.new_password" required>
+            </mat-form-field>
+            <mat-divider [vertical]="true"></mat-divider>
+            <mat-form-field class="example-full-width">
+              <input type="password" matInput placeholder="Confirm New Password" name="confirm-new-password" [(ngModel)]="newPassData.confirmm_new_password" required>
+            </mat-form-field> 
+            <button mat-raised-button color="primary">Change Password</button>
+        </form>
+        <div class="error_message" *ngIf="displayError()" >
+          {{getMessage()}}
+        </div>
+      </div>
+    
+    </mat-menu>
+ 
     </div>
 
   </mat-toolbar-row>
