--- a/PreAcademicInfoFront/webapp/src/app/teacher/note-finale/note-finale.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/teacher/note-finale/note-finale.component.html
@@ -7,7 +7,7 @@
 
   
   <ng-container matColumnDef="nume">
-    <th mat-header-cell *matHeaderCellDef> Nume </th>
+    <th mat-header-cell *matHeaderCellDef> Nume Prenume </th>
     <td mat-cell *matCellDef="let element"> {{element.nume}} {{element.prenume}} </td>
   </ng-container>
 
