--- a/PreAcademicInfoFront/webapp/src/app/teacher/note/note.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/teacher/note/note.component.html
@@ -2,7 +2,7 @@
 <div class="show">
 
   <div class="selectors">
-    <mat-form-field class="select" *ngIf="isMoreThanOneMaterii()" >
+    <mat-form-field class="select">
       <mat-select class = "white" placeholder="Materie" [(ngModel)]="selectedMaterie" (ngModelChange)="getGrupe()" name="materie">
         <mat-option *ngFor="let materie of materii" [value]="materie.viewValue" >
           {{materie.viewValue}}
