teacehr-view component created in students

--- a/PreAcademicInfoFront/webapp/src/app/student/navigation/navigation.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/student/navigation/navigation.component.html
@@ -11,7 +11,7 @@
     <button mat-menu-item routerLink="../statistics">Statistica note</button>
   </mat-menu>
   <button mat-button routerLink="../contracte" >Contracte studii</button>
-  <button mat-button >Profesori</button>
+  <button mat-button routerLink="../profesori">Profesori</button>
   <button mat-button [matMenuTriggerFor]="cereri">Cereri</button>
     <mat-menu #cereri="matMenu">
       <button mat-menu-item >Trimite Cerere</button>
