login ubb logo fixed

--- a/PreAcademicInfoFront/webapp/src/app/signin/login/login.component.scss
+++ b/PreAcademicInfoFront/webapp/src/app/signin/login/login.component.scss
@@ -1,4 +1,10 @@
-
+.ubbLogo{
+  background: url("./logo.PNG") no-repeat center;
+  width: 300px;
+  height: 200px;
+  position: relative;
+  left: 40%;
+}
 
 .ubb{
   margin-left: 40%;
