--- a/PreAcademicInfoFront/webapp/src/app/signin/login/login.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/signin/login/login.component.html
@@ -1,7 +1,7 @@
 
 
 <div class = "background_class">
-  <img src="logo.PNG" class="ubb" />
+  <div class="ubbLogo"></div>
   <form (ngSubmit)="submitForm()" class="form_style" >
       <h2>AcademicInfo - UBB</h2>
       <div class="display">
