--- a/PreAcademicInfoFront/webapp/src/app/signin/login/login.component.scss
+++ b/PreAcademicInfoFront/webapp/src/app/signin/login/login.component.scss
@@ -1,14 +1,13 @@
 .ubbLogo{
   background: url("./logo.PNG") no-repeat center;
-  width: 300px;
-  height: 200px;
+  width: 279px;
+  height: 86px;
   position: relative;
   left: 40%;
+  top:10px;
 }
 
 .ubb{
-  margin-left: 40%;
-  margin-top:2%;
   box-shadow: 10px 10px 5px gray;
 }
 
