--- a/PreAcademicInfoFront/webapp/src/app/teacher/note-lab-teacher/note-lab-teacher.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/teacher/note-lab-teacher/note-lab-teacher.component.html
@@ -16,7 +16,7 @@
       <th mat-header-cell *matHeaderCellDef> Nr Prezente </th>
       <td mat-cell *matCellDef="let element">
               <mat-form-field>
-                  <input matInput placeholder="" #input (focusout)="savePresence($event,element)">
+                  <input matInput placeholder="{{element.prezenteLab}}" #input (focusout)="savePresence($event,element)">
               </mat-form-field>
       </td>
     </ng-container>
@@ -44,8 +44,6 @@
                     <input matInput  type="number" placeholder="" >
                   </mat-form-field>
             </div>
-            <div>{{student.nume}}  </div>
-            <div>{{student.grades.length}}</div>
       </div>
     </td>
   </ng-container>
